# metrofleet

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
docs/: ROADMAP.md  SETUP.md
docs/business/: KPIS.md  PROJECT_CHARTER.md  USE_CASES.md
docs/general/: ROADMAP.md
docs/operations/: RUNBOOK.md
docs/technical/: API_SPECS.md  ARCHITECTURE.md  DATA_DICTIONARY.md  DECISION_LOG.md
infra/docker/: Dockerfile.analyst  Dockerfile.api  Dockerfile.dagster  Dockerfile.dashboard  Dockerfile.mlflow  Dockerfile.notebook  Dockerfile.web
workspaces/python/: pyproject.toml  workspace.yml
workspaces/python/analytics/: .gitignore  pyproject.toml
workspaces/python/analytics/notebooks/: 01_eda.ipynb  02_demand_patterns.ipynb  03_tipping_psychology.ipynb  04_anomaly_detection.ipynb  05_statistical_inference.ipynb  06_network_analysis.ipynb  07_zone_classification.ipynb  08_external_impact_analysis.ipynb  09_forecasting_prophet.ipynb
workspaces/python/analytics/training/: __init__.py  config.py  data_loader.py  models.py  train_anomaly_model.py  train_model.py  trainer.py
workspaces/python/apps/: pyproject.toml
workspaces/python/apps/admin_dashboard/: README.md  app.py
workspaces/python/apps/admin_dashboard/src/: __init__.py
workspaces/python/apps/admin_dashboard/src/components/: charts.py  data_table.py  forecasting.py  header.py  metrics.py  sidebar.py
workspaces/python/apps/admin_dashboard/src/config/: settings.py  styles.py
workspaces/python/apps/admin_dashboard/src/utils/: data_processing.py  database.py
workspaces/python/apps/api_gateway/: README.md  main.py  pyproject.toml
workspaces/python/apps/api_gateway/app/: __init__.py  main.py
workspaces/python/apps/api_gateway/app/api/v1/: __init__.py  health.py  prediction.py
workspaces/python/apps/api_gateway/app/core/: __init__.py  config.py  security.py
workspaces/python/apps/api_gateway/app/models/: __init__.py  loader.py
workspaces/python/apps/api_gateway/app/schemas/: __init__.py  trip.py
workspaces/python/apps/api_gateway/app/services/: __init__.py  features.py  prediction.py
workspaces/python/pipelines/: pyproject.toml
workspaces/python/pipelines/metrofleet_dbt/: dbt_project.yml  profiles.yml
workspaces/python/pipelines/orchestrator/: definitions.py
workspaces/python/pipelines/orchestrator/assets/: compliance.py  dbt.py  forcasting.py  holidays.py  ingestion.py  training.py  weather.py
workspaces/python/pipelines/orchestrator/resources/: database.py
workspaces/python/pipelines/transformations/: dbt_project.yml  profiles.yml
workspaces/python/pipelines/transformations/models/core/: fct_trips.sql
workspaces/python/pipelines/transformations/models/marts/: dm_daily_revenue.sql
workspaces/python/pipelines/transformations/models/staging/: sources.yml  stg_holidays.sql  stg_weather.sql  stg_yellow_tripdata.sql
workspaces/rust/: Cargo.toml
workspaces/rust/tlc-cli/: Cargo.toml  README.md
workspaces/rust/tlc-cli/src/: cli.rs  download.rs  main.rs  settings.rs  utils.rs  wizard.rs
workspaces/rust/tlc-core/: Cargo.toml
workspaces/rust/tlc-core/src/: download.rs  error.rs  lib.rs  utils.rs
workspaces/typescript/: README.md  package.json
workspaces/typescript/apps/analyst/: next.config.ts  package.json
workspaces/typescript/apps/analyst/app/: page.tsx
workspaces/typescript/apps/analyst/app/api/chat/: route.ts
workspaces/typescript/apps/analyst/components/: data-table.tsx  markdown.tsx  sql-block.tsx
workspaces/typescript/apps/analyst/lib/: db.ts  tools.ts
workspaces/typescript/apps/analyst/types/: database.ts
workspaces/typescript/apps/web/: README.md  drizzle.config.ts  package.json
workspaces/typescript/apps/web/app/: globals.css  layout.tsx  page.tsx
workspaces/typescript/apps/web/app/(dashboard)/: layout.tsx  page.tsx
workspaces/typescript/apps/web/app/(dashboard)/history/: page.tsx
workspaces/typescript/apps/web/app/actions/: trips.ts
workspaces/typescript/apps/web/app/api/predict/: route.ts
workspaces/typescript/apps/web/app/api/trips/: route.ts
workspaces/typescript/apps/web/app/history/: page.tsx
workspaces/typescript/apps/web/components/fare/: fare-form.tsx  fare-result.tsx  feature-cards.tsx  trip-map.tsx  zone-select.tsx
workspaces/typescript/apps/web/components/history/: columns.tsx  data-table.tsx  empty-state.tsx  index.ts  page-header.tsx
workspaces/typescript/apps/web/components/layout/: header.tsx  sidebar.tsx
workspaces/typescript/apps/web/components/ui/: datepicker.tsx  datepickerrange.tsx  datetimepicker.tsx
workspaces/typescript/apps/web/db/: index.ts  schema.ts
workspaces/typescript/apps/web/hooks/: use-fare-prediction.ts
workspaces/typescript/apps/web/lib/: types.ts  zones.ts
