[project]
name = "python-ws"
version = "0.1.0"
description = "Python workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connectorx>=0.4.4",
    "dagster>=1.12.3",
    "dagster-dbt>=0.28.3",
    "dagster-postgres>=0.28.3",
    "dagster-webserver>=1.12.3",
    "dbt-postgres>=1.9.1",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "streamlit>=1.50.0",
    "plotly>=6.5.0",
    "sqlalchemy>=2.0.44",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "mlflow>=3.6.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "python-dotenv>=1.2.1",
    "onnx>=1.20.0",
    "skl2onnx>=1.19.1",
    "onnxmltools>=1.14.0",
]

[tool.uv.workspace]
members = [
    "pipelines",
    "analytics",
    "apps",
]

[dependency-groups]
dev = ["ruff>=0.14.7"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
lint.select = ["F", "I"]
fix = true
