[project]
name = "python-ws"
version = "0.1.0"
description = "Python workspace"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "A. Marzoug" }]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
]
urls = { Repository = "https://github.com/a-marzoug/metrofleet" }

[tool.uv.workspace]
members = [
    "pipelines",
    "analytics",
    "apps",
    "apps/api_gateway",
    "apps/admin_dashboard",
]

[dependency-groups]
dev = ["ruff>=0.14.7"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
lint.select = ["F", "I"]
fix = true
