[project]
name = "apps"
version = "0.1.0"
description = "Streamlit Applications and Dashboards"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "A. Marzoug" }]
classifiers = [
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.13",
]
urls = { Repository = "https://github.com/a-marzoug/metrofleet" }
dependencies = [
    "streamlit>=1.50.0",
    "plotly>=6.5.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "connectorx>=0.4.4",
    "python-dotenv>=1.2.1",
]
