[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.3",
    "dagster-dbt>=0.28.3",
    "dagster-postgres>=0.28.3",
    "dagster-webserver>=1.12.3",
    "dbt-postgres>=1.9.1",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "connectorx>=0.4.4",
    "pyarrow>=22.0.0",
]
