[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.3",
    "dagster-dbt>=0.28.3",
    "dagster-postgres>=0.28.3",
    "dagster-webserver>=1.12.3",
    "dbt-postgres>=1.9.1",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "connectorx>=0.4.4",
    "pyarrow>=22.0.0",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
    "sqlalchemy>=2.0.44",
]
