[project]
name = "pipelines"
version = "0.1.0"
description = "Data Pipelines with Dagster and DBT"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "A. Marzoug" }]
classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.13",
]
urls = { Repository = "https://github.com/a-marzoug/metrofleet" }
dependencies = [
    "dagster>=1.12.3",
    "dagster-dbt>=0.28.3",
    "dagster-postgres>=0.28.3",
    "dagster-webserver>=1.12.3",
    "dbt-postgres>=1.9.1",
    "polars>=1.35.2",
    "psycopg2-binary>=2.9.11",
    "connectorx>=0.4.4",
    "pyarrow>=22.0.0",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
    "sqlalchemy>=2.0.44",
    "httpx>=0.28.1",
    "holidays>=0.86",
    "prophet>=1.2.1",
]
