[package]
name = "tlc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
