[project]
name = "api-gateway"
version = "0.1.0"
description = "Metrofleet Prediction API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "A. Marzoug" }]
classifiers = ["Framework :: FastAPI", "Programming Language :: Python :: 3.13"]
urls = { Repository = "https://github.com/a-marzoug/metrofleet" }
dependencies = [
    "fastapi>=0.123.3",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "pandas>=2.3.3",
    "holidays>=0.86",
]
